--- a/app/src/main/res/layout/activity_recent_transaction.xml
+++ b/app/src/main/res/layout/activity_recent_transaction.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.dmc.pocketbook.RecentTransactionActivity">
+    tools:context="com.dmc.pocketbook.activities.RecentTransactionActivity">
     <FrameLayout
         android:id="@+id/fragment_placeholder"
         android:layout_width="match_parent"
